Chat messages alignment fix

--- a/chat-app/src/containers/chat-messages/ChatMessages.css
+++ b/chat-app/src/containers/chat-messages/ChatMessages.css
@@ -2,5 +2,6 @@
   background-color: var(--white);
   max-width: 100%;
   overflow-y: scroll;
+  height: fill;
   padding-bottom: 0;
 }
